@@ -1,3 +1,8 @@
+Tue Jan  7 21:34:56 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
+	* src/odbc/error.c src/odbc/odbc.c:
+	- do not compiler ODBC3 code if not ODBC3
+	- fix some error in SQLTables (missing parameters and quoting)
+
 Tue Jan  7 20:53:38 CEST 2003	Frediano Ziglio <freddy77@angelfire.com>
 	* src/odbc/odbc.c: fix some issue with SQLGetFunctions
 
